fix margin on mobile
Text was appearing too close to the edge of the screen when viewed on
my iPhone

--- a/markdeep-everforest-mobile.css
+++ b/markdeep-everforest-mobile.css
@@ -135,7 +135,7 @@
 /* CSS Reset and Base Styles */
 * {
     margin: 0;
-    padding: 0;
+    padding: .7em;
     box-sizing: border-box;
     font-family: var(--font-default);
     font-size: medium;
